added more styles. pulling in runs and hits. next: add balls, strikes, and runners

--- a/src/styles/less/App.less
+++ b/src/styles/less/App.less
@@ -1,4 +1,15 @@
+.horizontal-gradient (@startColor: #eee, @endColor: white) {
+ 	background-color: @startColor;
+	background-image: -webkit-gradient(linear, left top, right top, from(@startColor), to(@endColor));
+	background-image: -webkit-linear-gradient(left, @startColor, @endColor);
+	background-image: -moz-linear-gradient(left, @startColor, @endColor);
+	background-image: -ms-linear-gradient(left, @startColor, @endColor);
+	background-image: -o-linear-gradient(left, @startColor, @endColor);
+}
 .App {
-    background-color: black;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     color: white;
+    .horizontal-gradient (#151515, #373636);
 }
