--- a/src/styles/css/App.css
+++ b/src/styles/css/App.css
@@ -1,4 +1,12 @@
 .App {
-  background-color: black;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   color: white;
+  background-color: #151515;
+  background-image: -webkit-gradient(linear, left top, right top, from(#151515), to(#373636));
+  background-image: -webkit-linear-gradient(left, #151515, #373636);
+  background-image: -moz-linear-gradient(left, #151515, #373636);
+  background-image: -ms-linear-gradient(left, #151515, #373636);
+  background-image: -o-linear-gradient(left, #151515, #373636);
 }
