--- a/src/styles/css/BasicGameView.css
+++ b/src/styles/css/BasicGameView.css
@@ -2,6 +2,15 @@
   display: flex;
   flex-direction: column;
   margin: 20px;
+  -webkit-box-shadow: 9px 12px 5px 0 rgba(0, 0, 0, 0.7);
+  -moz-box-shadow: 9px 12px 5px 0 rgba(0, 0, 0, 0.7);
+  box-shadow: 9px 12px 5px 0 rgba(0, 0, 0, 0.7);
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
 }
 .matchupsAndRecords {
   display: flex;
@@ -9,20 +18,29 @@
   justify-content: center;
   background-color: darkred;
   padding: 5px;
-  width: 200px;
+  width: 250px;
+  border-radius: 5px 5px 0 0;
 }
-.matchupsAndRecords h2 {
-  margin: 10px;
+.matchupsAndRecords h5 {
+  margin: 5px;
+}
+.awayTeam {
+  text-align: center;
+}
+.homeTeam {
+  text-align: center;
 }
 .birdsView {
   display: flex;
   flex-direction: row;
   background-color: lightgray;
   padding: 5px;
-  width: 200px;
+  width: 250px;
+  border-radius: 0 0 5px 5px;
+  color: black;
 }
 .diamond {
-  view-Box: 0 0 20 20;
+  view-Box: 0 0 30 30;
   height: 100px;
   width: 100px;
 }
